design-principles-02/src/main/java/com/farhad/example/design_principles02/tda/bad/AlertAction.java
package com.farhad.example.design_principles02.tda.bad;

public class AlertAction<E>  {

}
